umat everywhere except BIMEF

--- a/modules/intensity_transform/CMakeLists.txt
+++ b/modules/intensity_transform/CMakeLists.txt
@@ -1,2 +1,11 @@
 set(the_description "Intensity transformations")
 ocv_define_module(intensity_transform opencv_core opencv_imgproc WRAP python)
+#find_package(OpenCL 1.2 QUIET)
+find_package(OpenCL 2.1 QUIET)
+if(NOT OpenCL_FOUND)
+    message(STATUS "OpenCL intensity_transform SKIPPED: OpenCL SDK is required")
+else()
+    message(STATUS "OpenCL intensity_transform INCLUDED: ${OpenCL_LIBRARY} to ${the_module} and to${the_target}" )
+endif()
+#ocv_target_link_libraries(${the_module} PRIVATE ${OpenCL_LIBRARY})
+#ocv_target_link_libraries(${the_module} ${OpenCL_LIBRARY})
